CB-22177 Save logs from YCloud Master instances to the test project's artifacts
Based on the CB-21939 we should save the YARN instances cluster logs to the test artifacts on Jenkins.